remove peers, add users, add all required events, update swagger
