# src/modules/voicechat/models/http-models.go
@@ -4,25 +4,23 @@ type MessageJson struct {
 	Message string `json:"message"`
 }
 
-type WsAction string
-
-type Response struct {
-	Message string `json:"message"`
-	Data    any    `json:"data,omitempty"`
-}
-
 type CreateRoomReqBody struct {
 	RoomName string `json:"room_name"`
-	MaxPeers int    `json:"max_peers"`
+	MaxUsers int    `json:"max_users"`
 	HostName string `json:"host_name"`
 }
 
-type CreateRoomRespBody struct {
+type MinimalRoomData struct {
 	RoomId   string `json:"room_id"`
 	RoomName string `json:"room_name"`
 }
 
+type CreateRoomRespBody struct {
+	Message string          `json:"message"`
+	Data    MinimalRoomData `json:"data"`
+}
+
 type GetRoomsListRespBody struct {
-	Response
-	Data []VoiceRoom `json:"data"`
+	Message string      `json:"message"`
+	Data    []VoiceRoom `json:"data"`
 }
